Fix scrollbar, move snap to html element in CSS

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,3 +35,11 @@ body {
   background: var(--coral);
   color: white;
 }
+
+html {
+  scroll-snap-type: y proximity;
+}
+
+section, [data-snap] {
+  scroll-snap-align: start;
+}
